fixed spacing issue with home container

--- a/src/components/homeScreen/index.css
+++ b/src/components/homeScreen/index.css
@@ -1,3 +1,10 @@
 .container {
 margin-top: 60px;
 }
+
+@media only screen and (min-width: 600px) {
+.container {
+  margin-top: 70px;
+  margin-left: 210px;
+}
+}
